MODON MRE BPDEV/force-app/main/default/objects/Step_Escalation__c/Step_Escalation__c.object-meta.xml
<CustomObject>
    <label>Step Escalation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StepEscalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>