MODON MRE BPDEV/force-app/main/default/objects/Step_Escalation__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>