MODON MRE BPDEV/force-app/main/default/objects/Step_Escalation__c/fields/Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Department_Head__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>