MODON MRE BPDEV/force-app/main/default/objects/Step_Escalation__c/fields/Escalation_hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_hours__c</fullName>
    <label>Escalation hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>