MODON MRE BPDEV/force-app/main/default/objects/Step_Escalation__c/fields/Escalation_Trigger_Days__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Trigger_Days__c</fullName>
    <label>Escalation Trigger Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>