MODON MRE BPDEV/force-app/main/default/objects/Step_Escalation__c/fields/Trigger_To__c.field-meta.xml
<CustomField>
    <fullName>Trigger_To__c</fullName>
    <label>Trigger To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Assigned TO</fullName>
            </value>
            <value>
                <fullName>Assigned TO Manager</fullName>
            </value>
            <value>
                <fullName>Vertical Head</fullName>
            </value>
            <value>
                <fullName>Department Head</fullName>
            </value>
            <value>
                <fullName>CC Email</fullName>
            </value>
            <value>
                <fullName>BCC Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>