MODON MRE BPDEV/force-app/main/default/objects/Step_Escalation__c/fields/Vertical_Head__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Head__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vertical Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>